recebendo parametros na rota

--- a/templates/usuario.html
+++ b/templates/usuario.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Usuarios</title>
 </head>
 <body>
-    <h1> home - node + express</h1>
+    <h1>Usuarios</h1>
 
-    <a href="/usuario/30">ver usuario 30</a>
-    <a href="/usuario/496">ver usuario 496</a>
-
+    <a href="/">voltar</a>
 </body>
 </html>
