recebendo informações do formulario no corpo da requisição

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,6 @@
 
     <a href="/usuario/30">ver usuario 30</a>
     <a href="/usuario/496">ver usuario 496</a>
-
+    <a href="/cadastrar">Cadastrar</a>
 </body>
 </html>
